// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly ExpensesSummary with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     expense
    <Component />
     totalling 
    $0.00
  </h1>
</div>
`;

exports[`should render correctly ExpensesSummary with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    12
     expense
    s
     totalling 
    $0.00
  </h1>
</div>
`;
